# scaldys-project

./: .gitignore  .pre-commit-check-config.yaml  .pre-commit-config.yaml  .prettierrc  AUTHORS  CHANGELOG  LICENSE  README.md  README.rst  builder.toml  pyproject.toml  scaldys-project.toml  scaldys.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/manual/source/: authors.rst  conf.py  help.rst  index.rst  license.rst  modules.rst  scaldys_builder.common.rst  scaldys_builder.rst  scaldys_builder.windows.rst  scaldys_project.common.rst  scaldys_project.rst  scaldys_project.windows.rst
docs/manual/source/developers/: architecture.rst  contributing.rst  extension_points.rst  index.rst  init_command.rst  markdown_formatting.rst  publishing.rst
docs/manual/source/topics/: configuration.rst  documentation_building.rst  index.rst  project_layout.rst  windows_installer.rst
docs/manual/source/users/: cli_usage.rst  index.rst  installation.rst  (+2 more)
licenses/: README.md  cython.md  pre_commit.md  pyinstaller.md  pyright.md  pytest_cov.md  rich.md  ruff.md  setuptools.md  sphinx.md  typer.md
src/scaldys_builder/: __about__.py  __main__.py  builder.py
src/scaldys_builder/common/: base.py  compile_runner.py  config.py  docs.py  utils.py
src/scaldys_builder/windows/: builder.py
src/scaldys_project/: __about__.py  __main__.py
src/scaldys_project/cli/: cli.py  utils.py
src/scaldys_project/common/: base.py  compile_runner.py  config.py  docs.py  utils.py
src/scaldys_project/windows/: builder.py
tests/: test_config.py  test_docs.py  test_utils.py
(+19 files in other folders)
