[project]
name = "scaldys-builder"
version = "0.3.0"
authors = [
  { name="Scaldys", email="scaldys@scaldys.net" },
]
description = "A modular build system for Python projects targeting Windows."
readme = "README.rst"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python",
    "Operating System :: Microsoft :: Windows",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]
license-files = ["LICEN[CS]E*"]
dependencies = [
    "rich>=15.0.0",
    "typer>=0.25.0",
]

[project.optional-dependencies]
cython = [
    "cython>=3.2.4",
    "setuptools>=82.0.1",
]
windows = [
    "pyinstaller>=6.20.0",
]
docs = [
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]

[project.scripts]
scaldys-builder = "scaldys_builder.builder:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "cython>=3.2.4",
    "pre-commit>=4.5.0",
    "pyright>=1.1.409",
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "setuptools>=82.0.1",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
